@@ -11,6 +11,7 @@ import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -38,16 +39,8 @@ import com.dev.IbioScience.model.product.InternalCategorySmall;
 import com.dev.IbioScience.model.product.Product;
 import com.dev.IbioScience.model.product.ProductGradeBenefit;
 import com.dev.IbioScience.model.product.ProductImage;
-import com.dev.IbioScience.model.product.category.CategoryLarge;
-import com.dev.IbioScience.model.product.category.CategoryMedium;
-import com.dev.IbioScience.model.product.category.CategorySmall;
-import com.dev.IbioScience.model.product.relation.MediumSmallCategory;
-import com.dev.IbioScience.model.product.relation.SmallProductCategory;
-import com.dev.IbioScience.repository.category.CategoryLargeRepository;
-import com.dev.IbioScience.repository.category.CategoryMediumRepository;
-import com.dev.IbioScience.repository.category.CategorySmallRepository;
-import com.dev.IbioScience.repository.category.MediumSmallCategoryRepository;
-import com.dev.IbioScience.repository.category.SmallProductCategoryRepository;
+import com.dev.IbioScience.model.product.relation.MediumSmallProductCategory;
+import com.dev.IbioScience.repository.category.MediumSmallProductCategoryRepository;
 import com.dev.IbioScience.repository.product.ProductPromotionMappingRepository;
 import com.dev.IbioScience.repository.product.register.ProductGradeBenefitRepository;
 import com.dev.IbioScience.repository.product.register.ProductRepository;
@@ -56,6 +49,8 @@ import jakarta.persistence.criteria.Join;
 import jakarta.persistence.criteria.JoinType;
 import jakarta.persistence.criteria.Path;
 import jakarta.persistence.criteria.Predicate;
+import jakarta.persistence.criteria.Root;
+import jakarta.persistence.criteria.Subquery;
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -65,15 +60,10 @@ public class ProductListService {
 	private final ProductRepository productRepository;
 	private final ProductGradeBenefitRepository gradeBenefitRepository;
 	private final ProductPromotionMappingRepository promotionMappingRepository;
-
-	// 외부분류 요약(대표 1경로 + 외 N개) 생성을 위한 추가 리포지토리
-	private final SmallProductCategoryRepository smallProductCategoryRepository;
-	private final MediumSmallCategoryRepository mediumSmallCategoryRepository;
-	private final CategorySmallRepository categorySmallRepository;
-	private final CategoryMediumRepository categoryMediumRepository;
-	private final CategoryLargeRepository categoryLargeRepository;
+	private final MediumSmallProductCategoryRepository mspcRepository;
 
 	public Page<ProductListRowDTO> search(ProductListFilter f) {
+
 		int pageIndex = (f.getPage() == null || f.getPage() < 1) ? 0 : f.getPage() - 1;
 		int size = (f.getSize() == null || f.getSize() <= 0) ? 10 : f.getSize();
 		Pageable pageable = PageRequest.of(pageIndex, size, Sort.by(Sort.Direction.DESC, "id"));
@@ -99,33 +89,44 @@ public class ProductListService {
 			}
 		}
 
-		// === (3) 외부분류 요약(대표 1경로 + 외 N개) — 항상 생성 ===
-		final Map<Long, String> externalSummaryMap = (!ids.isEmpty()) ? buildExternalCategorySummary(ids)
-				: java.util.Collections.emptyMap();
+		// 3) 모드별 분류 요약 생성 (표시용)
+		String mode = normalizeMode(f.getCategoryMode());
+		Map<Long, String> categorySummaryMap;
+		if ("INTERNAL".equals(mode)) {
+			categorySummaryMap = buildInternalCategorySummary(products);
+		} else if ("EXTERNAL".equals(mode)) {
+			categorySummaryMap = buildExternalCategorySummary(ids); // ✅ 새 테이블 기준
+		} else {
+			// 전체 모드면: 우선 외부가 있으면 외부요약, 없으면 내부요약, 둘다 없으면 "-"
+			categorySummaryMap = buildMixedCategorySummary(products);
+		}
 
-		// === (4) DTO 매핑 ===
-		java.util.List<ProductListRowDTO> rows = products.stream().map(p -> {
-			java.util.Map<String, Integer> dealerPrices = buildDealerPrices(p, benefitMap.get(p.getId()));
-			String externalPathSummary = externalSummaryMap.get(p.getId());
+		// 4) DTO 매핑
+		List<ProductListRowDTO> rows = products.stream().map(p -> {
+			Map<String, Integer> dealerPrices = buildDealerPrices(p, benefitMap.get(p.getId()));
+			String categorySummary = categorySummaryMap.getOrDefault(p.getId(), "-");
 
 			return ProductListRowDTO.builder().id(p.getId()).internalProductCode(p.getInternalProductCode())
-					.code(p.getCode())
-					// categoryPath 는 리스트 표시용으로 더 이상 사용하지 않으니 null 유지
-					.categoryPath(null).externalCategorySummary(externalPathSummary) // 항상 소비자용 외부분류 표시
-					.imageUrl(resolveMainImageUrl(p)).name(p.getName()).consumerPrice(p.getConsumerPrice())
-					.salePrice(p.getSalePrice()).dealerPrices(dealerPrices)
-					.promotionTypes(promoMap.getOrDefault(p.getId(), java.util.Collections.emptySet())).build();
-		}).collect(java.util.stream.Collectors.toList());
+					.code(p.getCode()).categorySummary(categorySummary).imageUrl(resolveMainImageUrl(p))
+					.name(p.getName()).consumerPrice(p.getConsumerPrice()).salePrice(p.getSalePrice())
+					.dealerPrices(dealerPrices).promotionTypes(promoMap.getOrDefault(p.getId(), Collections.emptySet()))
+					.build();
+		}).toList();
 
 		return new PageImpl<>(rows, pageable, page.getTotalElements());
 	}
 
-	/** 동적 검색 조건 */
+	private String normalizeMode(String v) {
+		return (v == null) ? "" : v.trim().toUpperCase(Locale.ROOT);
+	}
+
 	private Specification<Product> buildSpec(ProductListFilter f) {
+
 		return (root, query, cb) -> {
+
 			List<Predicate> predicates = new ArrayList<>();
 
-			// 날짜(등록/수정): dateFrom / dateTo 만 사용
+			// ===== 날짜(등록/수정): dateFrom / dateTo =====
 			if (f.getDateField() != null && !f.getDateField().isBlank()) {
 				Path<LocalDateTime> datePath = "updatedAt".equalsIgnoreCase(f.getDateField()) ? root.get("updatedAt")
 						: root.get("createdAt");
@@ -136,18 +137,15 @@ public class ProductListService {
 				LocalDateTime fromDt = (from != null) ? from.atStartOfDay() : null;
 				LocalDateTime toDt = (to != null) ? to.atTime(23, 59, 59) : null;
 
-				if (fromDt != null && toDt != null) {
+				if (fromDt != null && toDt != null)
 					predicates.add(cb.between(datePath, fromDt, toDt));
-				} else if (fromDt != null) {
-					// 시작일만 있으면 시작일부터 쭉~~
+				else if (fromDt != null)
 					predicates.add(cb.greaterThanOrEqualTo(datePath, fromDt));
-				} else if (toDt != null) {
-					// 종료일만 있으면 종료일까지 쭉~~
+				else if (toDt != null)
 					predicates.add(cb.lessThanOrEqualTo(datePath, toDt));
-				}
 			}
 
-			// 진열/판매 상태
+			// ===== 진열/판매 상태 =====
 			if (f.getDisplayStatus() != null && !f.getDisplayStatus().isBlank()) {
 				predicates.add(cb.equal(root.get("displayStatus"), DisplayStatus.valueOf(f.getDisplayStatus())));
 			}
@@ -155,9 +153,10 @@ public class ProductListService {
 				predicates.add(cb.equal(root.get("saleStatus"), SaleStatus.valueOf(f.getSaleStatus())));
 			}
 
-			// 검색 (제품명 / 자체코드 / 품목코드 / 브랜드명)
+			// ===== 검색 =====
 			if (f.getKeyword() != null && !f.getKeyword().isBlank()) {
 				String kw = "%" + f.getKeyword().trim() + "%";
+
 				if ("internalProductCode".equalsIgnoreCase(f.getSearchType())) {
 					predicates.add(cb.like(root.get("internalProductCode"), kw));
 				} else if ("code".equalsIgnoreCase(f.getSearchType())) {
@@ -165,131 +164,146 @@ public class ProductListService {
 				} else if ("brand".equalsIgnoreCase(f.getSearchType())) {
 					Join<Product, Brand> brand = root.join("brand", JoinType.LEFT);
 					predicates.add(cb.like(brand.get("name"), kw));
-				} else { // name
+				} else {
 					predicates.add(cb.like(root.get("name"), kw));
 				}
 			}
 
-			// 분류(내부/외부)
-			if ("INTERNAL".equalsIgnoreCase(f.getCategoryMode())) {
+			// ===== 분류(내부/외부) =====
+			String mode = normalizeMode(f.getCategoryMode());
+
+			if ("INTERNAL".equals(mode)) {
+
+				// ✅ 핵심: INTERNAL 모드면 내부 분류가 없는 상품은 제외
+				predicates.add(cb.isNotNull(root.get("internalCategorySmall")));
+
+				// 필터가 있으면 더 좁힘 (INNER로 타고 들어가도 안전)
 				if (f.getSmallId() != null) {
-					Join<Product, InternalCategorySmall> small = root.join("internalCategorySmall", JoinType.LEFT);
+					Join<Product, InternalCategorySmall> small = root.join("internalCategorySmall", JoinType.INNER);
 					predicates.add(cb.equal(small.get("id"), f.getSmallId()));
+
 				} else if (f.getMediumId() != null) {
-					Join<Product, InternalCategorySmall> small = root.join("internalCategorySmall", JoinType.LEFT);
-					Join<InternalCategorySmall, InternalCategoryMedium> medium = small.join("medium", JoinType.LEFT);
+					Join<Product, InternalCategorySmall> small = root.join("internalCategorySmall", JoinType.INNER);
+					Join<InternalCategorySmall, InternalCategoryMedium> medium = small.join("medium", JoinType.INNER);
 					predicates.add(cb.equal(medium.get("id"), f.getMediumId()));
+
 				} else if (f.getLargeId() != null) {
-					Join<Product, InternalCategorySmall> small = root.join("internalCategorySmall", JoinType.LEFT);
-					Join<InternalCategorySmall, InternalCategoryMedium> medium = small.join("medium", JoinType.LEFT);
-					Join<InternalCategoryMedium, InternalCategoryLarge> large = medium.join("large", JoinType.LEFT);
+					Join<Product, InternalCategorySmall> small = root.join("internalCategorySmall", JoinType.INNER);
+					Join<InternalCategorySmall, InternalCategoryMedium> medium = small.join("medium", JoinType.INNER);
+					Join<InternalCategoryMedium, InternalCategoryLarge> large = medium.join("large", JoinType.INNER);
 					predicates.add(cb.equal(large.get("id"), f.getLargeId()));
 				}
-			} else if ("EXTERNAL".equalsIgnoreCase(f.getCategoryMode())) {
-				// 외부분류: N:N (product -> SmallProductCategory -> CategorySmall)
-				if (f.getSmallId() != null || f.getMediumId() != null || f.getLargeId() != null) {
-					Join<Product, SmallProductCategory> spc = root.join("smallProductCategories", JoinType.LEFT);
-					Join<SmallProductCategory, CategorySmall> small = spc.join("small", JoinType.LEFT);
 
-					if (f.getSmallId() != null) {
-						predicates.add(cb.equal(small.get("id"), f.getSmallId()));
-					} else {
-						// Medium/Large 필터는 프론트에서 smallId 계산 후 전달하는 전략 유지
-					}
+			} else if ("EXTERNAL".equals(mode)) {
+
+				// ✅ EXTERNAL: 새 경로 테이블 기준으로만 필터
+				query.distinct(true);
+
+				Subquery<Integer> sq = query.subquery(Integer.class);
+				Root<MediumSmallProductCategory> mspc = sq.from(MediumSmallProductCategory.class);
+
+				List<Predicate> sqPreds = new ArrayList<>();
+
+				sqPreds.add(cb.equal(mspc.get("product").get("id"), root.get("id")));
+
+				if (f.getLargeId() != null) {
+					sqPreds.add(cb.equal(mspc.get("medium").get("large").get("id"), f.getLargeId()));
 				}
+				if (f.getMediumId() != null) {
+					sqPreds.add(cb.equal(mspc.get("medium").get("id"), f.getMediumId()));
+				}
+				if (f.getSmallId() != null) {
+					sqPreds.add(cb.equal(mspc.get("small").get("id"), f.getSmallId()));
+				}
+
+				sq.select(cb.literal(1)).where(cb.and(sqPreds.toArray(new Predicate[0])));
+				predicates.add(cb.exists(sq));
 			}
 
 			return cb.and(predicates.toArray(new Predicate[0]));
 		};
 	}
 
-	/** 외부분류: 대표 1경로 + 외 N개 요약 생성 */
+	// =========================
+	// 화면 표시용 "내부분류 요약"
+	// =========================
+	private Map<Long, String> buildInternalCategorySummary(List<Product> products) {
+		Map<Long, String> map = new HashMap<>();
+		for (Product p : products) {
+			InternalCategorySmall s = p.getInternalCategorySmall();
+			if (s == null) {
+				map.put(p.getId(), "-");
+				continue;
+			}
+			InternalCategoryMedium m = s.getMedium();
+			InternalCategoryLarge l = (m != null) ? m.getLarge() : null;
+
+			String lName = (l != null && l.getName() != null) ? l.getName() : "-";
+			String mName = (m != null && m.getName() != null) ? m.getName() : "-";
+			String sName = (s.getName() != null) ? s.getName() : "-";
+
+			map.put(p.getId(), lName + " > " + mName + " > " + sName);
+		}
+		return map;
+	}
+
+	// =========================
+	// 화면 표시용 "외부분류 요약" (✅ 새 테이블 기준)
+	// =========================
 	private Map<Long, String> buildExternalCategorySummary(Collection<Long> productIds) {
 		Map<Long, String> result = new HashMap<>();
 		if (productIds == null || productIds.isEmpty())
 			return result;
 
-		// 제품 → 소분류들 (N:N)
-		List<SmallProductCategory> spcList = smallProductCategoryRepository.findByProductIds(productIds);
-		Map<Long, Set<Long>> productToSmallIds = new HashMap<>();
-		for (SmallProductCategory spc : spcList) {
-			productToSmallIds.computeIfAbsent(spc.getProduct().getId(), k -> new LinkedHashSet<>())
-					.add(spc.getSmall().getId());
-		}
-		Set<Long> allSmallIds = productToSmallIds.values().stream().flatMap(Set::stream).collect(Collectors.toSet());
-		if (allSmallIds.isEmpty()) {
-			for (Long pid : productIds)
-				result.put(pid, "-");
-			return result;
-		}
+		List<MediumSmallProductCategory> links = mspcRepository.findByProduct_IdIn(productIds);
 
-		// 소분류 → 중분류들 (N:N)
-		List<MediumSmallCategory> mscList = mediumSmallCategoryRepository.findBySmallIds(allSmallIds);
+		Map<Long, List<MediumSmallProductCategory>> byProduct = links.stream()
+				.collect(Collectors.groupingBy(x -> x.getProduct().getId()));
 
-		// 이름 맵 구성
-		Set<Long> mediumIds = mscList.stream().map(msc -> msc.getMedium().getId()).collect(Collectors.toSet());
-		List<CategorySmall> smalls = categorySmallRepository.findByIdIn(allSmallIds);
-		List<CategoryMedium> mediums = categoryMediumRepository.findByIdIn(mediumIds);
-
-		Map<Long, CategorySmall> smallMap = smalls.stream().collect(Collectors.toMap(CategorySmall::getId, s -> s));
-		Map<Long, CategoryMedium> mediumMap = mediums.stream().collect(Collectors.toMap(CategoryMedium::getId, m -> m));
-
-		// Large 맵
-		Set<Long> largeIds = mediums.stream().map(m -> m.getLarge().getId()).collect(Collectors.toSet());
-		List<CategoryLarge> larges = categoryLargeRepository.findByIdIn(largeIds);
-		Map<Long, CategoryLarge> largeMap = larges.stream().collect(Collectors.toMap(CategoryLarge::getId, l -> l));
-
-		// smallId -> msc 리스트 (정렬: sortOrder asc, null last → medium 이름 asc)
-		Map<Long, List<MediumSmallCategory>> smallToMscs = mscList.stream()
-				.collect(Collectors.groupingBy(msc -> msc.getSmall().getId()));
-		smallToMscs.replaceAll((sid, list) -> list.stream().sorted((a, b) -> {
-			Integer sa = a.getSortOrder() == null ? Integer.MAX_VALUE : a.getSortOrder();
-			Integer sb = b.getSortOrder() == null ? Integer.MAX_VALUE : b.getSortOrder();
-			int cmp = Integer.compare(sa, sb);
-			if (cmp != 0)
-				return cmp;
-			String an = Optional.ofNullable(a.getMedium().getName()).orElse("");
-			String bn = Optional.ofNullable(b.getMedium().getName()).orElse("");
-			return an.compareToIgnoreCase(bn);
-		}).toList());
-
-		// 제품별 경로 조합 → 대표 1개 + 외 N개
 		for (Long pid : productIds) {
-			Set<Long> smallIds = productToSmallIds.getOrDefault(pid, Collections.emptySet());
-			if (smallIds.isEmpty()) {
+			List<MediumSmallProductCategory> list = byProduct.getOrDefault(pid, Collections.emptyList());
+			if (list.isEmpty()) {
 				result.put(pid, "-");
 				continue;
 			}
 
-			List<String> paths = new ArrayList<>();
-			for (Long sid : smallIds) {
-				List<MediumSmallCategory> links = smallToMscs.getOrDefault(sid, Collections.emptyList());
-				CategorySmall small = smallMap.get(sid);
-				String sName = (small != null ? small.getName() : "-");
+			// 경로 문자열들(중복 제거) 생성
+			List<String> paths = list.stream().map(x -> {
+				String lName = (x.getMedium() != null && x.getMedium().getLarge() != null)
+						? nz(x.getMedium().getLarge().getName())
+						: "-";
+				String mName = (x.getMedium() != null) ? nz(x.getMedium().getName()) : "-";
+				String sName = (x.getSmall() != null) ? nz(x.getSmall().getName()) : "-";
+				return lName + " > " + mName + " > " + sName;
+			}).distinct().sorted().toList();
 
-				if (links.isEmpty()) {
-					paths.add("- > - > " + sName);
-				} else {
-					for (MediumSmallCategory link : links) {
-						CategoryMedium m = mediumMap.get(link.getMedium().getId());
-						String mName = (m != null ? m.getName() : "-");
-						CategoryLarge l = (m != null ? largeMap.get(m.getLarge().getId()) : null);
-						String lName = (l != null ? l.getName() : "-");
-						paths.add(lName + " > " + mName + " > " + sName);
-					}
-				}
-			}
-
-			if (paths.isEmpty()) {
-				result.put(pid, "-");
-			} else {
-				List<String> distinct = paths.stream().distinct().toList();
-				String rep = distinct.get(0);
-				int rest = distinct.size() - 1;
-				result.put(pid, rest > 0 ? (rep + " 외 " + rest + "개") : rep);
-			}
+			String rep = paths.get(0);
+			int rest = paths.size() - 1;
+			result.put(pid, rest > 0 ? (rep + " 외 " + rest + "개") : rep);
 		}
+
 		return result;
+	}
+
+	private Map<Long, String> buildMixedCategorySummary(List<Product> products) {
+		List<Long> ids = products.stream().map(Product::getId).toList();
+
+		Map<Long, String> ext = buildExternalCategorySummary(ids);
+		Map<Long, String> in = buildInternalCategorySummary(products);
+
+		Map<Long, String> out = new HashMap<>();
+		for (Product p : products) {
+			String e = ext.get(p.getId());
+			if (e != null && !e.equals("-"))
+				out.put(p.getId(), e);
+			else
+				out.put(p.getId(), in.getOrDefault(p.getId(), "-"));
+		}
+		return out;
+	}
+
+	private String nz(String v) {
+		return (v == null || v.isBlank()) ? "-" : v;
 	}
 
 	/** 대표 이미지 URL 선택 (MAIN 우선 → 그 외, sortOrder asc) */
@@ -312,11 +326,14 @@ public class ProductListService {
 
 	/** 딜러가 계산 (등급별 할인 적용, 소수점 반올림) */
 	private Map<String, Integer> buildDealerPrices(Product p, List<ProductGradeBenefit> benefits) {
+
 		Map<String, Integer> result = new LinkedHashMap<>();
 		Integer base = (p.getSalePrice() == null ? 0 : p.getSalePrice());
 
 		for (DealerGrade grade : DealerGrade.values()) {
+
 			BigDecimal rate = null;
+
 			if (benefits != null) {
 				for (ProductGradeBenefit b : benefits) {
 					if (b.getDealerGrade() == grade && b.getDiscountRate() != null) {
@@ -325,6 +342,7 @@ public class ProductListService {
 					}
 				}
 			}
+
 			int price = base;
 			if (rate != null) {
 				BigDecimal hundred = new BigDecimal("100");
@@ -333,6 +351,7 @@ public class ProductListService {
 			}
 			result.put(grade.name(), price);
 		}
+
 		return result;
 	}
 }
